# fever-engine

./: .clang-format  CMakeLists.txt  Cargo.toml  Makefile  readme.md  rustfmt.toml
assets/: shader.wgsl
core/: main.cc
engine/: opengl.cc
src/: app.rs  cube.rs  host.rs  input.rs  main.rs  renderer.rs  state.rs
src/math/: mod.rs
src/renderer/: mod.rs
src/window/: mod.rs
src/window/win32/: api.rs  mod.rs
