[package]
name = "fever_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
pollster = "0.4.0"
raw-window-handle = "0.6.2"
wgpu = "28.0.0"

[dependencies.windows-sys]
version = "0.61.2"
features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_Graphics_Dwm",
	"Win32_System_LibraryLoader",
	"Win32_System_Registry",
]
